--- a/src/DropDown/Style.css
+++ b/src/DropDown/Style.css
@@ -1,4 +1,4 @@
-h1,
+ h1,
 p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -92,9 +92,9 @@ input[type="submit"]:hover {
   height: 60px;
 }
 
-/* products css  */
+ products css 
 
-.productheader {
+ .productheader {
   background-color: hsl(225, 96%, 42%);
    width: 100%;
   height: 50px;
@@ -144,10 +144,8 @@ margin: 10px 0px;
 #productdetails {
   text-align: left;
 }
-
-
 img {
   margin: auto;
   height: 160px;
   width: 180px;
-}
+} 
