--- a/src/Scrolling/Scroll.css
+++ b/src/Scrolling/Scroll.css
@@ -18,12 +18,12 @@ body {
   }
   
   .highlight {
-    color: rgba(0, 0, 255, 1);
+    color: rgb(0, 0, 65);
     opacity: 1;
   }
   
   .lowlight {
-    color: rgba(0, 0, 255, 0.3);
+    color: rgba(33, 33, 202, 0.3);
     opacity: 0.3;
   }
   
